Release Note

* current
  * added protection to AdderGen against immediate XML reading
  * added eventPickNumSites
  * added protection against multiple updateUnmergeDataset calls
  * allowing to use non-T1 SE as destination
  * enabled the rebrokerage for ganga jobs
  * fixed insertTaskParamsPanda for analysis submission with prod role
  * fixed typo in killEventServiceConsumers and killUnusedEventServiceConsumers
  * changed to allow retry of failed analysis jobs while the task is still running
  * changed insertTaskParams to work with duplicated task names
  * added protection to MsgWrapper
  * increased timeout value for EP
  * improved TA to aggregate container
  * fixed pilot retry for pmerge
  * replacing $JEDITASKID
  * extracting sourceURL when fixedSandbox
  * added fixedSandbox
  * fixed panda_proxy_cache.py
  * removed NOWAIT from finalizePendingJobs
  * added protection when NOWAIT error happens in finalizePending
  * extracting nFiles and nEvents for incexec
  * added DataServiceUtils.getSitesShareDDM
  * added firstSubmission to Setupper
  * extracting more params for incexec
  * fixed getJediTaskDetails
  * fixed retryJob to check attemptNr in JEDI
  * setting retry in retry history
  * changed to use comm_parameters
  * changed to allow reactivation of aborted tasks
  * fixed insertTaskParamsPanda
  * changed propagateResultToJEDI to avoid row contention
  * fixed to kill jobs in merging
  * fixed runRebro for JEDI analysis
  * added jediTaskID and datasetID in the where clause of updateUnmergedJobs
  * setting maxattempt when JEDI files are produced
  * added protection against too long modification host
  * using failedAttempt
  * fixed file counting to merge failed jobs
  * changed the brokerage to get all file replicas first 
  * introduced 2h of timeout for transferring user jobs
  * added proxyCache
  * added -m to reassignTask
  * including _\d+$ in hospital queues
  * using bps in getWanDataFlowMaxtrix